css/styles.css
/* ... */
#goodtextcontrast{
  text-align: center;
  font-size: 22px;
  padding-left: 0px;
  color: 	black;
  padding-left: 90px;
  padding-top: 60px;
}

#contrasttext{
  text-align: center;
  font-size: 22px;
  padding-left: 0px;
  color: 	black;
  padding-left: 90px;
  padding-top: 60px;
}

#badtextcontrast{
  text-align: center;
  font-size: 22px;
  padding-left: 0px;
  color: 	yellow;
  padding-left: 10px;
  padding-top: 60px;
}

#badtextcolour{
  text-align: center;
  font-size: 22px;
  padding-left: 0px;
  color: 	yellow;
  padding-left: 10px;
  padding-top: 60px;
}

#badfont{
  font-family: badfont;
}

#goodfont{
  font-family: goodfont;
}

#mobilenav{
  visibility: visible;
  font-family: "Calibri Light", serif;
  background-color: #a19c9c;
  font-weight: bold;
  display: flex;
  justify-content: left;
  justify-content: space-around;
}

#mobilenav th a{
  text-decoration: none;
  color: black;
}

table{
  border-spacing: 20px;
  padding-bottom: 5px;
}

th{
  background-color: #7289da;
  border-radius: 20px;
  font-size: 12px;
}

main {
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
}

#intro{
  width: 88%;
  border-radius: 10px;
  padding: 1em;
  margin-left: 10px;
  margin-top: 20px;
  background-color: #B9B9D8;
  display: flex;
  flex-direction: column;
  font-family: "Calibri Light", serif;
}

#intro h1{
  font-weight: bold;
}

#intro p{
  padding-left: 1em;
  font-weight: bold;
  float: right;
}

#intro img{
  max-width: 450px;
  width: 100%;
  border-radius: 5px;
  float: left;
}

#guidelines{
  margin-left: 10px;
  font-size: 18px;
  font-family: "Calibri Light", serif;
  font-weight: bold;
  text-decoration: none;
  padding: 10px;
  color: black;
}

#list{
  margin-top: 20px;
  width: 88%;
  border-radius: 10px;
  padding: 1em;
  margin-left: 10px;
  background-color: #B9B9D8;
  display: flex;
  flex-direction: column;
  font-family: "Calibri Light", serif;
}

#list h1{
  font-weight: bold;
  text-align: center;
}

#list ul{
  margin-left: 100px;
  padding-left: 1em;
  font-weight: bold;
  text-align: center;
  list-style-position: inside;
}

#list li{
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 150px;
}

#bad{
  width: 88%;
  border-radius: 10px;
  padding: 1em;
  margin-left: 10px;
  margin-top: 20px;
  background-color: #B9B9D8;
  display: flex;
  flex-direction: column;
  font-family: "Calibri Light", serif;
}

#bexample{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: #2B2B2A;
  display: flex;
  flex-direction: column;
}

#bsexample{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  display: flex;
  flex-direction: column;
}

#bad p{
  font-family: "Calibri Light", serif;
  font-weight: bold;
}

#exampletext{
  display: flex;
  flex-direction: column;
}

#exampletext p{
  text-align: center;
}

#exampletext h4{
  text-align: center;
  font-size: 24px;
  padding-left: 150px;
}

#badnav {
  visibility: visible;
  margin-left: 0px;
  margin-top: 0px;
  height: 11%;
  width: 91%;
  border-radius: 20px;
}

#badnav a{
  height: 20px;

  padding-right: 70px;
  text-align: center;
}

#gexample{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: #2B2B2A;
  display: flex;
  flex-direction: column;
}

#gsexample{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  display: flex;
  flex-direction: column;
}

#bcontrast{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: #95a323;
  display: flex;
  flex-direction: column;
}

#gcontrast{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: #a19c9c;
  display: flex;
}

#precontrast{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: white;
  display: flex;
}

#good{
  width: 88%;
  border-radius: 10px;
  padding: 1em;
  margin-left: 10px;
  margin-top: 20px;
  background-color: #B9B9D8;
  display: flex;
  flex-direction: column;
  font-family: "Calibri Light", serif;
  font-weight: bold;
}

#goodnav{
  visibility: visible;
  margin-left: 0px;
  margin-top: 0px;
  height: 11%;
  width: 70%;
  border-radius: 20px;
}

#goodnav a{
  height: 20px;
  padding-right: 30px;
  text-align: center;
}

#bbutton{
  background-color: #7289da;
  border-radius: 20px;
  font-family: "Calibri Light", serif;
  font-weight: bold;
  height: 30px;
  width: 50px;
  margin-left: 110px;
  margin-top: 80px;
  font-size: 8px;
}

#gbutton{
  background-color: #7289da;
  border-radius: 20px;
  font-family: "Calibri Light", serif;
  font-weight: bold;
  margin-top: 50px;
  margin-left: 110px;
  height: 70px;
  width: 80px;
}

#gscroll{
  height: 225px;
  width: 550px;
}

#bscroll{
  height: 225px;
  width: 450px;
}

#gflash{
  height: 225px;
  width: 300px;
}

#bflash{
  height: 225px;
  width: 300px;
}

#interactive{
  width: 88%;
  border-radius: 10px;
  padding: 1em;
  margin-left: 10px;
  margin-top: 20px;
  background-color: #B9B9D8;
  display: flex;
  flex-direction: column;
  font-family: "Calibri Light", serif;
}

#highcontrast{
  background-color: #7289da;
  border-radius: 20px;
  font-family: "Calibri Light", serif;
  font-weight: bold;
  margin-top: 50px;
  margin-left: 140px;
  height: 70px;
  width: 80px;
}

#blackbackground{
  margin-left: 40px;
  border-radius: 20px;
  height: 200px;
  width: 300px;
  background-color: black;
  display: flex;

}

#whitetext{
  text-align: center;
  font-size: 22px;
  padding-left: 0px;
  color: 	white;
  padding-left: 90px;
  padding-top: 60px;
}

#exampletext h4{
  padding-right: 180px;
}
/* #navicon{
  background-color: #a19c9c;
} */

/* .topNav a:not(:first-child){
  display: none;
}

.topNav a.icon{
  float: left;
  display: block;
}

.topNav.responsive{
  position: relative;
}

.topNav.responsive a.icon{
  position: absolute;
  right: 0;
  top: 0;
}
/* ... */

